[tool.poetry]
name = "mvp_counter"
version = "0.1.0"
description = "tba"
authors = ["iron3oxide <jason.hottelet@tuta.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "mvp_counter" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.4"
python-dotenv = "^0.21.0"
cryptography = "^39.0.0"
fletched = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
